Create basic layout for the form

--- a/style.css
+++ b/style.css
@@ -21,3 +21,9 @@
     height: 300px;
     background-color: green;
 }
+
+#book-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
