--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@
     border: 10px solid blue;
     margin: 20px;
     padding: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 150px));
     gap: 20px;
     
 }
 
 #front-cover {
-    height: 300px;
+    height: 500px;
     background-color: green;
 }
 
