--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
+html *
+{
+   font-size: 1em !important;
+   line-height: 1.1lh;
+   color: #000 !important;
+   font-family: "Revalia", sans-serif !important;
+}
+
 .cover-content {
     
     background-color: green;
-    display: flex;
-    flex-grow: 1;
     margin: 20px;
     
+}
+
+#add-book {
+  height: 60px;
+  width: 120px;
+  padding-bottom: 10px;
 }
 
 #grid-container {
@@ -12,15 +24,17 @@
     border: 10px solid blue;
     margin: 20px;
     padding: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 150px));
+    grid-template-columns: repeat(auto-fit, minmax(500px, 150px));
     gap: 20px;
     
 }
 
 #front-cover {
-    height: 500px;
+    height: 800px;
+    width: 500px;
     background-color: green;
     display:flex;
+    gap: 10px;
     flex-direction: column;
     align-items: center;
 }
@@ -29,6 +43,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#delete-button {
+  height: 60px;
+  width: 100px;
+  text-align: center;
+  line-height: 0px;
+  padding-bottom: 10px;
+  border: none;
+  background-color: #2196F3;
 }
 
 /* The switch - the box around the slider */
