--- a/style.css
+++ b/style.css
@@ -41,20 +41,89 @@ body {
   font-size: 30px;
 }
 
+dialog:open {
+  animation: fade-in 0.7s ease-out;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    display: none;
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+    display: block;
+  }
+}
+
 dialog {
+  animation: fade-out 0.7s ease-out;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background-color: var(--body-bg-color);
 }
 
-input,
-textarea
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+    display: block;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translate(-50%, -50%);
+    display: none;
+  }
+}
+
+input[type=text], input[type=number]
 {
-  font-size: 30px;
-  padding-bottom: 10px;
+  border: none;
+  font-size: 50px;
+   height: 60px;
+   width: 500px;
+   line-height: 100px;
+   padding-bottom: 25px;
+   background-color: var(--secondary-bg-color);
+   caret-color: transparent;
 }
 
+textarea{
+  width: 500px;
+  border: none;
+  font-size: 50px;
+  caret-color: transparent;
+  background-color: var(--secondary-bg-color);
+
+}
+
+ .no-spinners {
+         -moz-appearance: textfield;
+      }
+      
+      .no-spinners::-webkit-outer-spin-button,
+      .no-spinners::-webkit-inner-spin-button {
+         -webkit-appearance: none;
+         margin: 0;
+      }
+
+
+input:focus, textarea:focus {
+
+  box-shadow: 4px 8px 6px -2px var(--shadow-color);
+  outline: none;
+
+}
+
+label {
+  font-size: 30px;
+}
 #read-delete {
   height: 300px;
   display: flex;
@@ -74,7 +143,7 @@ textarea
 
 }
 
-#add-book {
+#add-book, #submit-btn {
   height: 50px;
   width: 160px;
   padding-bottom: 10px;
@@ -84,12 +153,20 @@ textarea
   border: none;
 }
 
-#add-book:hover {
+#add-book:hover  {
   transition: 0.6s;
   background-color: var(--text-color);
   color: black;
 
 }
+
+#submit-btn:hover{
+  transition: 0.6s;
+  background-color: var(--text-color);
+  color: black;
+
+}
+
 
 #grid-container {
   display: grid;
