--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ html * {
 }
 
 body {
-  background-color: var(--body-bg-color)
+  background-color: var(--body-bg-color);
+  height: 100%;
 }
 
 #header-bar {
@@ -104,7 +105,7 @@ textarea{
 }
 
  .no-spinners {
-         -moz-appearance: textfield;
+         appearance: textfield;
       }
       
       .no-spinners::-webkit-outer-spin-button,
@@ -236,9 +237,11 @@ label {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--body-bg-color);
+  background-color: rgb(245, 85, 85);
   -webkit-transition: .4s;
   transition: .4s;
+  
+
 }
 
 .slider:before {
@@ -251,20 +254,24 @@ label {
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
+  
 }
 
 input:checked+.slider {
   background-color: var(--text-color);
+  
 }
 
 input:focus+.slider {
   box-shadow: 0 0 1px var(--text-color);
+  
 }
 
 input:checked+.slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
+  
 }
 
 /* Rounded sliders */
@@ -285,4 +292,80 @@ dialog::backdrop {
 #delete-button:hover {
   transition: 0.6s;
   background-color: red;
+}
+
+@media(width < 900px) {
+
+  body{
+    
+    width: 100%;
+    
+    display: flex;
+    flex-direction: column;
+    
+
+    
+  }
+
+  #header-bar {
+    
+    height: 200px;
+    width: 115%;
+    padding: 0 20px;
+
+    justify-content: space-evenly;
+    
+    
+    
+    
+    
+    
+  }
+
+  #add-book{
+    width: 200px;
+    
+  }
+  
+  #front-cover{
+    margin: 0%;
+    
+  }
+
+  dialog {
+  animation: fade-out 0.7s ease-out;
+  
+  top: 75%;
+  left:68%;
+  
+  background-color: var(--body-bg-color);
+  padding: 50px 50px;
+}
+input[type=text], input[type=number]
+{
+  border: none;
+  font-size: 30px;
+   height: 40px;
+   width: 300px;
+   line-height: 100px;
+   padding-bottom: 25px;
+   background-color: var(--secondary-bg-color);
+   caret-color: transparent;
+}
+
+textarea{
+  width: 400px;
+  border: none;
+  font-size: 30px;
+  caret-color: transparent;
+  background-color: var(--secondary-bg-color);
+
+
+}
+
+* {
+
+-webkit-tap-highlight-color: transparent;
+}
+
 }
